<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/putih"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/ic_rectangle_558"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:background="@drawable/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="SiTiga"
                android:textColor="@color/warna_oren"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/sistem_informasi_statistik_salatiga"
            android:textColor="@color/putih"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/logo_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="Suspicious0dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_kependudukan"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/group" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/kependudukan"
                        android:textAlignment="center"
                        android:textColor="@color/putih"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_PDRD"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/money_bag" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/PDRD"
                        android:textAlignment="center"
                        android:textColor="@color/putih"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_ketenagakerjaan"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/builder" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/tenaga"
                    android:textAlignment="center"
                    android:textColor="@color/putih"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_IPM"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ipm" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/IPM"
                    android:textAlignment="center"
                    android:textColor="@color/putih"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            tools:ignore="Suspicious0dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="100dp">
                <Button
                    android:id="@+id/btn_kemiskinan"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/kemiskinan" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="14sp"
                    android:text="@string/Kemiskinan"
                    android:textAlignment="center"
                    android:textColor="@color/putih"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="100dp">
                <Button
                    android:id="@+id/btn_lainya"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/lainnya" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="14sp"
                    android:text="@string/Lainnya"
                    android:textAlignment="center"
                    android:textColor="@color/putih"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="40dp">
            <Button
                android:id="@+id/btn_tblDinamis"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Table Dinamis"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:background="@drawable/ic_rectangle_559" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="40dp">
            <Button
                android:id="@+id/btn_galery"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Galeri Infografis"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:background="@drawable/ic_rectangle_559" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="40dp">
            <Button
                android:id="@+id/btn_berita"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Berita Resmi Statistik"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:background="@drawable/ic_rectangle_559" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="40dp">
            <Button
                android:id="@+id/btn_publikasi"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Publikasi"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:background="@drawable/ic_rectangle_559" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>